<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.mlpquizz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:scaleType="center"
            android:src="@drawable/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/title"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Question One -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:text="@string/questionOne"
                android:textColor="#000000"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/oneA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/rainbowdash" />

            <CheckBox
                android:id="@+id/oneB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/applejack" />

            <CheckBox
                android:id="@+id/oneC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/rarity" />

            <CheckBox
                android:id="@+id/oneD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/fluttershy" />

            <!-- Question Two -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/questionTwo"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/textEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="@string/answerHint"
                android:textSize="14sp" />

            <!-- Question Three -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/questionThree"
                android:textColor="#000000"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/balloons" />

                <RadioButton
                    android:id="@+id/threeB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diamonds" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/butterflies" />

            </RadioGroup>

            <!-- Question Four -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/questionFour"
                android:textColor="#000000"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp">

                <RadioButton
                    android:id="@+id/fourA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pinkiepie" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twilightsparkle" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fluttershy" />

            </RadioGroup>

            <!-- Question Five -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/questionFive"
                android:textColor="#000000"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/fiveA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/rarity" />

            <CheckBox
                android:id="@+id/fiveB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/applejack" />

            <CheckBox
                android:id="@+id/fiveC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/twilightsparkle" />

            <CheckBox
                android:id="@+id/fiveD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/pinkiepie" />

        </LinearLayout>

        <!-- Submit button -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="submit"
            android:padding="8dp"
            android:text="@string/submit"
            android:textColor="#FCE4EC"
            android:textSize="18sp" />

    </RelativeLayout>

</ScrollView>


